Fixed the overflow issue on small displays

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,12 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
